--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
               <li class="header__how-item">В вашем темпе</li>
             </ul>
           </div>
-          <a class="header__btn" href="#contacts" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700" data-aos-anchor-placement="top-bottom">Отправить сообщение</a>
+          <button class="header__btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700" data-aos-anchor-placement="top-bottom">Пройти тест</button>
         </div>
       </div>
     </header>
@@ -311,9 +311,9 @@
               <h4 class="contacts__form-title">
                 Остались вопросы? Пишите
               </h4>
-              <input class="contacts__form-input contacts__form-input--name req" type="text" name="name" placeholder="Ваше имя">
-              <input class="contacts__form-input contacts__form-input--email req" type="text" name="email" placeholder="Ваша почта">
-              <textarea class="contacts__form-area req" name="message" placeholder="Ваше сообщение"></textarea>
+              <input class="contacts__form-input contacts__form-input--name --req" type="text" name="name" placeholder="Ваше имя">
+              <input class="contacts__form-input contacts__form-input--email --req" type="text" name="email" placeholder="Ваша почта">
+              <textarea class="contacts__form-area --req" name="message" placeholder="Ваше сообщение"></textarea>
               <button class="contacts__form-btn" type="submit">Отправить</button>
             </form>
             <img class="contacts__form-img" src="images/contacts-img.png" alt="contacts-img">
@@ -381,6 +381,50 @@
         </div>
       </div>
     </footer>
+
+    <div class="quiz">
+      <div class="quiz__box">
+        <div class="quiz__pagination"></div>
+        <div class="quiz__box-header">
+          <button class="quiz__close-cross"></button>
+          <h5 class="quiz__question">
+            1. <u>____</u> you interested in sport? 
+          </h5>
+          <ul class="quiz__list">
+            <li class="quiz__list-item">
+              <label class="quiz__label">
+                <input class="quiz__answer quiz__answer-a" type="radio" name="answer">
+                <span class="quiz__answer-style"></span>
+                <span class="quiz__text-a">Be</span>
+              </label>
+            </li>
+            <li class="quiz__list-item">
+              <label class="quiz__label">
+                <input class="quiz__answer quiz__answer-b" type="radio" name="answer">
+                <span class="quiz__answer-style"></span>
+                <span class="quiz__text-b">Am</span>
+              </label>
+            </li>
+            <li class="quiz__list-item">
+              <label class="quiz__label">
+                <input class="quiz__answer quiz__answer-c" type="radio" name="answer">
+                <span class="quiz__answer-style"></span>
+                <span class="quiz__text-c">Is</span>
+              </label>
+            </li>
+            <li class="quiz__list-item">
+              <label class="quiz__label">
+                <input class="quiz__answer quiz__answer-d" type="radio" name="answer">
+                <span class="quiz__answer-style"></span>
+                <span class="quiz__text-d">Are</span>
+              </label>
+            </li>
+          </ul>
+        </div>
+          <button class="quiz__close-btn">Закрыть</button>
+          <button class="quiz__btn">Далее</button>
+        </div>
+    </div>
 
   <script src="js/main.min.js"></script>
 </body>
