optimization(webp, SEO) and bugs fix)

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>English Online</title>
+  <meta name="description"
+    content="Здравствуйте! Меня зовут Надежда. Я учитель и онлайн репетитор английского языка с многолетним опытом.">
+  <meta name="keywords" content="Английский язык, преподаватель, репетитор, учитель, онлайн">
+  <title>Английский Язык Онлайн</title>
+
+  <link rel="preload" href="fonts/Gilroy-Semibold.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="fonts/Gilroy-Medium.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="fonts/Gilroy-Extrabold.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="fonts/Gilroy-Bold.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="fonts/Gilroy-Black.woff2" as="font" type="font/woff2">
+
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -35,7 +45,7 @@
               </li>
             </ul>
           </nav>
-          <div class="header__social" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="900">
+          <div class="header__social" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="800">
             <a class="header__social-link" href="https://api.whatsapp.com/send?phone=79107075629" target="_blank">
               <svg width="32" height="30" viewBox="0 0 32 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0)">
@@ -71,11 +81,11 @@
           </div>
         </div>
         <div class="header__content">
-          <h1 class="header__title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+          <h1 class="header__title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
             ЗАГОВОРИТЕ НА АНГЛИЙСКОМ
             НЕ ВЫХОДЯ ИЗ ДОМА
           </h1>
-          <div class="header__how" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+          <div class="header__how" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
             <p class="header__how-subtitle">
               Работаем на результат
             </p>
@@ -85,7 +95,8 @@
               <li class="header__how-item">В вашем темпе</li>
             </ul>
           </div>
-          <button class="header__btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700" data-aos-anchor-placement="top-bottom">Пройти тест</button>
+          <button class="header__btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"
+            data-aos-anchor-placement="top-bottom">Пройти тест</button>
         </div>
       </div>
     </header>
@@ -150,16 +161,21 @@
               </div>
 
               <ul class="about__experience-list">
-                <li class="about__experience-item" data-aos="fade-up">Опыт работы в сфере международных отношений более 10 лет
+                <li class="about__experience-item" data-aos="fade-up">Опыт работы в сфере международных отношений более
+                  10 лет
                 </li>
                 <li class="about__experience-item" data-aos="fade-up" data-aos-delay="50">Языковая стажировка в США</li>
                 <li class="about__experience-item" data-aos="fade-up" data-aos-delay="100">Опыт проживания в США</li>
-                <li class="about__experience-item" data-aos="fade-up" data-aos-delay="150">Большой опыт работы в мультикультурной среде и ежедневного
+                <li class="about__experience-item" data-aos="fade-up" data-aos-delay="150">Большой опыт работы в
+                  мультикультурной среде и ежедневного
                   общения с носителями языка</li>
               </ul>
               </ul>
             </div>
-            <img class="about__img" src="images/about-photo.png" alt="photo" data-aos="zoom-in" data-aos-duration="1000" data-aos-offset="200">
+            <picture class="about__img" data-aos="zoom-in" data-aos-duration="1000" data-aos-offset="200">
+              <source srcset="images/about-photo.webp" type="image/webp">
+              <img src="images/about-photo.png" alt="photo">
+            </picture>
           </div>
         </div>
       </section>
@@ -171,7 +187,10 @@
             </h2>
             <div class="benefits__inner">
               <div class="benefits__box" data-aos="flip-left" data-aos-duration="800">
-                <img class="benefits__box-img" src="images/benefits-box-icon-1.png" alt="icon-1">
+                <picture class="benefits__box-img">
+                  <source srcset="images/benefits-box-icon-1.webp" type="image/webp">
+                  <img src="images/benefits-box-icon-1.png" alt="icon-1">
+                </picture>
                 <h5 class="benefits__box-title">
                   Персональная
                   программа
@@ -184,7 +203,10 @@
                 </p>
               </div>
               <div class="benefits__box" data-aos="flip-left" data-aos-duration="800">
-                <img class="benefits__box-img" src="images/benefits-box-icon-2.png" alt="icon-2">
+                <picture class="benefits__box-img">
+                  <source srcset="images/benefits-box-icon-2.webp" type="image/webp">
+                  <img src="images/benefits-box-icon-2.png" alt="icon-2">
+                </picture>
                 <h5 class="benefits__box-title">
                   Поддержка и
                   мотивация
@@ -196,7 +218,10 @@
                 </p>
               </div>
               <div class="benefits__box" data-aos="flip-left" data-aos-duration="800">
-                <img class="benefits__box-img" src="images/benefits-box-icon-3.png" alt="icon-3">
+                <picture class="benefits__box-img">
+                  <source srcset="images/benefits-box-icon-3.webp" type="image/webp">
+                  <img src="images/benefits-box-icon-3.png" alt="icon-3">
+                </picture>
                 <h5 class="benefits__box-title">
                   Снятие страха
                   перед грамматикой
@@ -206,7 +231,10 @@
                 </p>
               </div>
               <div class="benefits__box" data-aos="flip-left" data-aos-duration="800">
-                <img class="benefits__box-img" src="images/benefits-box-icon-4.png" alt="icon-4">
+                <picture class="benefits__box-img">
+                  <source srcset="images/benefits-box-icon-4.webp" type="image/webp">
+                  <img src="images/benefits-box-icon-4.png" alt="icon-4">
+                </picture>
                 <h5 class="benefits__box-title">
                   Занятия по
                   Скайпу
@@ -216,7 +244,10 @@
                 </p>
               </div>
               <div class="benefits__box" data-aos="flip-left" data-aos-duration="800">
-                <img class="benefits__box-img" src="images/benefits-box-icon-5.png" alt="icon-5">
+                <picture class="benefits__box-img">
+                  <source srcset="images/benefits-box-icon-5.webp" type="image/webp">
+                  <img src="images/benefits-box-icon-5.png" alt="icon-5">
+                </picture>
                 <h5 class="benefits__box-title">
                   Умеренная
                   нагрузка
@@ -281,9 +312,6 @@
               <div class="reviews__slider-item swiper-slide">
                 <img class="reviews__slider-img" src="images/review-slide-6.jpg" alt="review-slide">
               </div>
-              <div class="reviews__slider-item swiper-slide">
-                <img class="reviews__slider-img" src="images/review-slide-7.jpg" alt="review-slide">
-              </div>
             </div>
 
             <div class="swiper-button-prev"></div>
@@ -311,12 +339,17 @@
               <h4 class="contacts__form-title">
                 Остались вопросы? Пишите
               </h4>
-              <input class="contacts__form-input contacts__form-input--name --req" type="text" name="name" placeholder="Ваше имя">
-              <input class="contacts__form-input contacts__form-input--email --req" type="text" name="email" placeholder="Ваша почта">
+              <input class="contacts__form-input contacts__form-input--name --req" type="text" name="name"
+                placeholder="Ваше имя">
+              <input class="contacts__form-input contacts__form-input--email --req" type="text" name="email"
+                placeholder="Ваша почта">
               <textarea class="contacts__form-area --req" name="message" placeholder="Ваше сообщение"></textarea>
               <button class="contacts__form-btn" type="submit">Отправить</button>
             </form>
-            <img class="contacts__form-img" src="images/contacts-img.png" alt="contacts-img">
+            <picture class="contacts__form-img">
+              <source srcset="images/contacts-img.webp" type="image/webp">
+              <img src="images/contacts-img.png" alt="contacts-img">
+            </picture>    
           </div>
         </div>
       </section>
@@ -388,7 +421,7 @@
         <div class="quiz__box-header">
           <button class="quiz__close-cross"></button>
           <h5 class="quiz__question">
-            1. <u>____</u> you interested in sport? 
+            1. <u>____</u> you interested in sport?
           </h5>
           <ul class="quiz__list">
             <li class="quiz__list-item">
@@ -421,12 +454,12 @@
             </li>
           </ul>
         </div>
-          <button class="quiz__close-btn">Закрыть</button>
-          <button class="quiz__btn">Далее</button>
-        </div>
+        <button class="quiz__close-btn">Закрыть</button>
+        <button class="quiz__btn">Далее</button>
+      </div>
     </div>
 
-  <script src="js/main.min.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 
 </html>
