change header markup

--- a/app/index.html
+++ b/app/index.html
@@ -22,81 +22,88 @@
   <div class="wrapper">
     <header class="header section" id="header">
       <div class="container">
-        <div class="header__top">
-          <nav class="menu">
-            <button class="menu-btn">
-              <span></span>
-            </button>
-            <ul class="menu__list">
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#about">ОБО МНЕ</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#benefits">ПРЕИМУЩЕСТВА</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#for-who">ДЛЯ КОГО</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#reviews">ОТЗЫВЫ</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#contacts">КОНТАКТЫ</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="header__social" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="800">
-            <a class="header__social-link" href="https://api.whatsapp.com/send?phone=79107075629" target="_blank">
-              <svg width="32" height="30" viewBox="0 0 32 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0)">
-                  <path class="header__social-img"
-                    d="M26.0333 4.25024C23.3281 1.54644 19.7322 0.0576172 15.9063 0.0576172C15.906 0.0576172 15.9051 0.0576172 15.9049 0.0576172C14.0127 0.0578424 12.1686 0.424024 10.4244 1.14625C8.67999 1.86848 7.11716 2.91275 5.77898 4.25024C3.074 6.95382 1.5844 10.5485 1.5844 14.372C1.5844 16.6522 2.13486 18.9182 3.17787 20.9372L0.770536 27.8109C0.600869 28.2957 0.720965 28.8227 1.08463 29.186C1.33902 29.4404 1.67385 29.5756 2.01814 29.5756C2.16573 29.5756 2.31489 29.5508 2.46045 29.4999L9.3377 27.094C11.3577 28.1365 13.6249 28.6867 15.9063 28.6867C19.7318 28.6867 23.3281 27.1976 26.0333 24.4941C28.7383 21.7905 30.2281 18.1958 30.2281 14.3723C30.2281 10.5485 28.7385 6.95382 26.0333 4.25024ZM24.8085 23.2698C22.4307 25.6467 19.269 26.9553 15.9063 26.9553C13.8491 26.9553 11.8054 26.4468 9.99609 25.4843C9.66802 25.31 9.28025 25.28 8.93212 25.4019L2.68396 27.5875L4.87093 21.3426C4.99283 20.9942 4.96264 20.6066 4.78824 20.2789C3.82544 18.471 3.31644 16.4284 3.31644 14.372C3.31644 11.0111 4.62601 7.85103 7.00382 5.47445C9.38142 3.0981 12.5427 1.78921 15.9051 1.78876H15.9063C19.2692 1.78876 22.4307 3.09765 24.8085 5.47445C27.1865 7.85103 28.4961 11.0109 28.4961 14.372C28.4961 17.7332 27.1865 20.8933 24.8085 23.2698Z"
-                    fill="#314862" />
-                  <path class="header__social-img"
-                    d="M21.2288 15.6507C20.57 14.9922 19.4979 14.9922 18.8391 15.6507L18.1185 16.3709C16.3292 15.3965 14.8813 13.9493 13.9061 12.161L14.6267 11.4407C15.2857 10.7823 15.2857 9.71073 14.6267 9.05223L12.6849 7.11143C12.026 6.45293 10.9539 6.45293 10.2951 7.11143L8.74173 8.66398C7.85194 9.55331 7.80755 11.0822 8.61668 12.9692C9.31923 14.6076 10.6049 16.4083 12.2369 18.0395C13.8689 19.6706 15.6706 20.9556 17.3098 21.6578C18.2068 22.042 19.0227 22.2337 19.7277 22.2337C20.5067 22.2337 21.1502 21.9997 21.6173 21.5328L23.1706 19.98V19.9803C23.4899 19.6611 23.6657 19.2371 23.6657 18.786C23.6657 18.3347 23.4899 17.9106 23.1706 17.5917L21.2288 15.6507ZM20.3924 20.3086C20.1385 20.5624 19.3575 20.6514 17.9923 20.0667C16.5507 19.4492 14.9417 18.2944 13.4618 16.8152C11.9819 15.3361 10.8266 13.7281 10.2088 12.2873C9.62364 10.9228 9.71264 10.142 9.96658 9.88819L11.4902 8.36536L13.3721 10.2465L12.4701 11.1482C12.0623 11.5558 11.9638 12.174 12.2254 12.6866C13.4113 15.0107 15.2673 16.8657 17.5926 18.0509C18.1056 18.3124 18.7242 18.2142 19.132 17.8064L20.0339 16.9049L21.9161 18.786L20.3924 20.3086Z"
-                    fill="#314862" />
-                </g>
-                <defs>
-                  <clipPath id="clip0">
-                    <rect width="31" height="30" fill="white" transform="translate(0.125)" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </a>
-            <a class="header__social-link" href="tg://resolve?domain=Nadia_Surova">
-              <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0)">
-                  <path class="header__social-img"
-                    d="M30.4366 0.382026C30.1425 0.0384337 29.655 -0.0889855 29.2215 0.0639175L1.68828 9.60915C1.13822 9.80094 0.752122 10.266 0.680445 10.8229C0.609454 11.3772 0.864103 11.915 1.3418 12.2245L5.2774 14.8019C5.65869 15.0517 6.14898 15.0785 6.55729 14.8718L15.0944 10.5529L8.44082 15.3191C8.12846 15.5429 7.94183 15.8999 7.94183 16.2738V20.6887C7.94183 21.1441 8.2022 21.5613 8.62127 21.7779C9.04103 21.9945 9.54804 21.973 9.94673 21.7208L12.9368 19.8181L15.8772 21.7414C16.1348 21.9108 16.4416 22 16.7513 22C16.8559 22 16.961 21.9897 17.0645 21.969C17.4774 21.8864 17.8427 21.6417 18.0669 21.2977L30.5238 1.59207C30.7663 1.21267 30.7315 0.727156 30.4366 0.382026ZM16.6855 20.2271L13.6405 18.2352C13.4287 18.0964 13.1846 18.0269 12.9407 18.0269C12.7021 18.0269 12.4632 18.0935 12.2541 18.2266L9.70147 19.851V16.523L21.4503 8.10692C21.975 7.73103 22.1071 7.04693 21.7574 6.51572C21.4075 5.98451 20.707 5.80503 20.1279 6.09809L6.01227 13.2391L2.68351 11.0591L28.0378 2.26937L16.6855 20.2271Z"
-                    fill="#314862" />
-                </g>
-                <defs>
-                  <clipPath id="clip0">
-                    <rect width="31" height="22" fill="white" transform="translate(0.125)" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </a>
-            <a class="header__phone" href="tel:79107075629">+7 (910) 707 56 29</a>
+        <div class="header__inner">
+          <div class="header__top">
+            <nav class="menu">
+              <button class="menu-btn">
+                <span></span>
+              </button>
+              <ul class="menu__list">
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#about">ОБО МНЕ</a>
+                </li>
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#benefits">ПРЕИМУЩЕСТВА</a>
+                </li>
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#for-who">ДЛЯ КОГО</a>
+                </li>
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#reviews">ОТЗЫВЫ</a>
+                </li>
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#contacts">КОНТАКТЫ</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="header__social" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="800">
+              <a class="header__social-link" href="https://api.whatsapp.com/send?phone=79107075629" target="_blank">
+                <svg width="32" height="30" viewBox="0 0 32 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0)">
+                    <path class="header__social-img"
+                      d="M26.0333 4.25024C23.3281 1.54644 19.7322 0.0576172 15.9063 0.0576172C15.906 0.0576172 15.9051 0.0576172 15.9049 0.0576172C14.0127 0.0578424 12.1686 0.424024 10.4244 1.14625C8.67999 1.86848 7.11716 2.91275 5.77898 4.25024C3.074 6.95382 1.5844 10.5485 1.5844 14.372C1.5844 16.6522 2.13486 18.9182 3.17787 20.9372L0.770536 27.8109C0.600869 28.2957 0.720965 28.8227 1.08463 29.186C1.33902 29.4404 1.67385 29.5756 2.01814 29.5756C2.16573 29.5756 2.31489 29.5508 2.46045 29.4999L9.3377 27.094C11.3577 28.1365 13.6249 28.6867 15.9063 28.6867C19.7318 28.6867 23.3281 27.1976 26.0333 24.4941C28.7383 21.7905 30.2281 18.1958 30.2281 14.3723C30.2281 10.5485 28.7385 6.95382 26.0333 4.25024ZM24.8085 23.2698C22.4307 25.6467 19.269 26.9553 15.9063 26.9553C13.8491 26.9553 11.8054 26.4468 9.99609 25.4843C9.66802 25.31 9.28025 25.28 8.93212 25.4019L2.68396 27.5875L4.87093 21.3426C4.99283 20.9942 4.96264 20.6066 4.78824 20.2789C3.82544 18.471 3.31644 16.4284 3.31644 14.372C3.31644 11.0111 4.62601 7.85103 7.00382 5.47445C9.38142 3.0981 12.5427 1.78921 15.9051 1.78876H15.9063C19.2692 1.78876 22.4307 3.09765 24.8085 5.47445C27.1865 7.85103 28.4961 11.0109 28.4961 14.372C28.4961 17.7332 27.1865 20.8933 24.8085 23.2698Z"
+                      fill="#314862" />
+                    <path class="header__social-img"
+                      d="M21.2288 15.6507C20.57 14.9922 19.4979 14.9922 18.8391 15.6507L18.1185 16.3709C16.3292 15.3965 14.8813 13.9493 13.9061 12.161L14.6267 11.4407C15.2857 10.7823 15.2857 9.71073 14.6267 9.05223L12.6849 7.11143C12.026 6.45293 10.9539 6.45293 10.2951 7.11143L8.74173 8.66398C7.85194 9.55331 7.80755 11.0822 8.61668 12.9692C9.31923 14.6076 10.6049 16.4083 12.2369 18.0395C13.8689 19.6706 15.6706 20.9556 17.3098 21.6578C18.2068 22.042 19.0227 22.2337 19.7277 22.2337C20.5067 22.2337 21.1502 21.9997 21.6173 21.5328L23.1706 19.98V19.9803C23.4899 19.6611 23.6657 19.2371 23.6657 18.786C23.6657 18.3347 23.4899 17.9106 23.1706 17.5917L21.2288 15.6507ZM20.3924 20.3086C20.1385 20.5624 19.3575 20.6514 17.9923 20.0667C16.5507 19.4492 14.9417 18.2944 13.4618 16.8152C11.9819 15.3361 10.8266 13.7281 10.2088 12.2873C9.62364 10.9228 9.71264 10.142 9.96658 9.88819L11.4902 8.36536L13.3721 10.2465L12.4701 11.1482C12.0623 11.5558 11.9638 12.174 12.2254 12.6866C13.4113 15.0107 15.2673 16.8657 17.5926 18.0509C18.1056 18.3124 18.7242 18.2142 19.132 17.8064L20.0339 16.9049L21.9161 18.786L20.3924 20.3086Z"
+                      fill="#314862" />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0">
+                      <rect width="31" height="30" fill="white" transform="translate(0.125)" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </a>
+              <a class="header__social-link" href="tg://resolve?domain=Nadia_Surova">
+                <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0)">
+                    <path class="header__social-img"
+                      d="M30.4366 0.382026C30.1425 0.0384337 29.655 -0.0889855 29.2215 0.0639175L1.68828 9.60915C1.13822 9.80094 0.752122 10.266 0.680445 10.8229C0.609454 11.3772 0.864103 11.915 1.3418 12.2245L5.2774 14.8019C5.65869 15.0517 6.14898 15.0785 6.55729 14.8718L15.0944 10.5529L8.44082 15.3191C8.12846 15.5429 7.94183 15.8999 7.94183 16.2738V20.6887C7.94183 21.1441 8.2022 21.5613 8.62127 21.7779C9.04103 21.9945 9.54804 21.973 9.94673 21.7208L12.9368 19.8181L15.8772 21.7414C16.1348 21.9108 16.4416 22 16.7513 22C16.8559 22 16.961 21.9897 17.0645 21.969C17.4774 21.8864 17.8427 21.6417 18.0669 21.2977L30.5238 1.59207C30.7663 1.21267 30.7315 0.727156 30.4366 0.382026ZM16.6855 20.2271L13.6405 18.2352C13.4287 18.0964 13.1846 18.0269 12.9407 18.0269C12.7021 18.0269 12.4632 18.0935 12.2541 18.2266L9.70147 19.851V16.523L21.4503 8.10692C21.975 7.73103 22.1071 7.04693 21.7574 6.51572C21.4075 5.98451 20.707 5.80503 20.1279 6.09809L6.01227 13.2391L2.68351 11.0591L28.0378 2.26937L16.6855 20.2271Z"
+                      fill="#314862" />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0">
+                      <rect width="31" height="22" fill="white" transform="translate(0.125)" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </a>
+              <a class="header__phone" href="tel:79107075629">+7 (910) 707 56 29</a>
+            </div>
           </div>
-        </div>
-        <div class="header__content">
-          <h1 class="header__title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-            ЗАГОВОРИТЕ НА АНГЛИЙСКОМ
-            НЕ ВЫХОДЯ ИЗ ДОМА
-          </h1>
-          <div class="header__how" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-            <p class="header__how-subtitle">
-              Работаем на результат
-            </p>
-            <ul class="header__how-list">
-              <li class="header__how-item">Без стресса</li>
-              <li class="header__how-item header__how-item--mark--center">Онлайн</li>
-              <li class="header__how-item">В вашем темпе</li>
-            </ul>
+          <div class="header__content">
+            <h1 class="header__title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+              ЗАГОВОРИТЕ НА АНГЛИЙСКОМ
+              НЕ ВЫХОДЯ ИЗ ДОМА
+            </h1>
+            <div class="header__how" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+              <p class="header__how-subtitle">
+                Работаем на результат
+              </p>
+              <ul class="header__how-list">
+                <li class="header__how-item">Без стресса</li>
+                <li class="header__how-item header__how-item--mark--center">Онлайн</li>
+                <li class="header__how-item">В вашем темпе</li>
+              </ul>
+            </div>
+            <div class="header__btn-wrapper" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600" data-aos-anchor-placement="top-bottom">
+              <!-- <div class="header__btn-info">
+                Узнайте свой уровень Английского языка
+                <img class="header__btn-arrow" src="images/header-arrow.svg" alt="arrow">
+              </div> -->
+              <button class="header__btn">Пройти тест</button>
+            </div>
           </div>
-          <button class="header__btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"
-            data-aos-anchor-placement="top-bottom">Пройти тест</button>
         </div>
       </div>
     </header>
@@ -139,8 +146,18 @@
                   <li class="about__content-item" data-aos="fade-right">
                     ОГЭ/ОГЕ (ОГЭ -70 баллов, ЕГЭ – от 75 до 98 баллов).
                   </li>
+                  <li class="about__content-item" data-aos="fade-right">
+                    Помощь в освоении школьной программы, гарантированно помогаю подтянуть оценки в течение уже первого
+                    месяца занятий.
+                  </li>
                   <li class="about__content-item" data-aos="fade-right" data-aos-delay="50">
                     Международные экзамены (IELTS, TOEFL, KET, PET, FCE и др.).
+                  </li>
+                  <li class="about__content-item" data-aos="fade-right" data-aos-delay="50">
+                    Общий английский для путешествий, учебы и работы за границей.
+                  </li>
+                  <li class="about__content-item" data-aos="fade-right" data-aos-delay="100">
+                    Бизнес-курс для продвижения на работе и общения с клиентами.
                   </li>
                   <li class="about__content-item" data-aos="fade-right" data-aos-delay="100">
                     Вступительные экзамены в военные учебные заведения: Суворовское военное училище и
@@ -148,18 +165,15 @@
                     (2-3 месяца).
                   </li>
                   <li class="about__content-item" data-aos="fade-right" data-aos-delay="150">
-                    Вступительные экзамены в магистратуру и аспирантуру по выбранному направлению.
+                    Вступительные экзамены в магистратуру и аспирантуру, кандидатский минимум по выбранному направлению.
                   </li>
-                  <li class="about__content-item" data-aos="fade-right" data-aos-delay="200">
-                    Сдача кандидатского минимума по выбранному направлению.
-                  </li>
-                  <li class="about__content-item" data-aos="fade-right" data-aos-delay="250">
+                  <li class="about__content-item" data-aos="fade-right" data-aos-delay="150">
                     Корпоративное обучение: общий и деловой английский, тематический английский (ядерная энергетика,
                     радиоэкология, радиационная безопасность, маркетинг, экология, таможня, гостиничный бизнес, IT и
                     др.)
                   </li>
+                </ul>
               </div>
-
               <ul class="about__experience-list">
                 <li class="about__experience-item" data-aos="fade-up">Опыт работы в сфере международных отношений более
                   10 лет
@@ -169,7 +183,6 @@
                 <li class="about__experience-item" data-aos="fade-up" data-aos-delay="150">Большой опыт работы в
                   мультикультурной среде и ежедневного
                   общения с носителями языка</li>
-              </ul>
               </ul>
             </div>
             <picture class="about__img" data-aos="zoom-in" data-aos-duration="1000" data-aos-offset="200">
@@ -323,7 +336,7 @@
       </section>
       <section class="to-call section">
         <div class="container">
-          <p class="to-call__text" data-aos="zoom-in" data-aos-duration="2000" data-aos-anchor-placement="top-center">
+          <p class="to-call__text" data-aos="zoom-in" data-aos-duration="2000">
             Подарите себе новые знания,
             а значит и новые <span>знакомства, перспективы, возможности!</span>
           </p>
@@ -349,7 +362,7 @@
             <picture class="contacts__form-img">
               <source srcset="images/contacts-img.webp" type="image/webp">
               <img src="images/contacts-img.png" alt="contacts-img">
-            </picture>    
+            </picture>
           </div>
         </div>
       </section>
@@ -458,8 +471,10 @@
         <button class="quiz__btn">Далее</button>
       </div>
     </div>
+  </div>
 
-    <script src="js/main.min.js"></script>
+
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
