--- a/app/index.html
+++ b/app/index.html
@@ -439,30 +439,30 @@
           <ul class="quiz__list">
             <li class="quiz__list-item">
               <label class="quiz__label">
-                <input class="quiz__answer quiz__answer-a" type="radio" name="answer">
+                <input class="quiz__answer quiz__answer-a a" type="radio" name="answer">
                 <span class="quiz__answer-style"></span>
-                <span class="quiz__text-a">Be</span>
+                <span class="quiz__text-a"></span>
               </label>
             </li>
             <li class="quiz__list-item">
               <label class="quiz__label">
-                <input class="quiz__answer quiz__answer-b" type="radio" name="answer">
+                <input class="quiz__answer quiz__answer-b b" type="radio" name="answer">
                 <span class="quiz__answer-style"></span>
-                <span class="quiz__text-b">Am</span>
+                <span class="quiz__text-b"></span>
               </label>
             </li>
             <li class="quiz__list-item">
               <label class="quiz__label">
-                <input class="quiz__answer quiz__answer-c" type="radio" name="answer">
+                <input class="quiz__answer quiz__answer-c c" type="radio" name="answer">
                 <span class="quiz__answer-style"></span>
-                <span class="quiz__text-c">Is</span>
+                <span class="quiz__text-c"></span>
               </label>
             </li>
             <li class="quiz__list-item">
               <label class="quiz__label">
-                <input class="quiz__answer quiz__answer-d" type="radio" name="answer">
+                <input class="quiz__answer quiz__answer-d d" type="radio" name="answer">
                 <span class="quiz__answer-style"></span>
-                <span class="quiz__text-d">Are</span>
+                <span class="quiz__text-d"></span>
               </label>
             </li>
           </ul>
@@ -470,6 +470,14 @@
         <button class="quiz__close-btn">Закрыть</button>
         <button class="quiz__btn">Далее</button>
       </div>
+    </div>
+  </div>
+
+  <div class="modal">
+    <div class="modal__content">
+      <p class="modal__text">
+        Спасибо. Ваше сообщение отправлено.
+      </p>
     </div>
   </div>
 
