--- a/app/index.html
+++ b/app/index.html
@@ -96,11 +96,8 @@
                 <li class="header__how-item">В вашем темпе</li>
               </ul>
             </div>
-            <div class="header__btn-wrapper" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600" data-aos-anchor-placement="top-bottom">
-              <!-- <div class="header__btn-info">
-                Узнайте свой уровень Английского языка
-                <img class="header__btn-arrow" src="images/header-arrow.svg" alt="arrow">
-              </div> -->
+            <div class="header__btn-wrapper" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"
+              data-aos-anchor-placement="top-bottom">
               <button class="header__btn">Пройти тест</button>
             </div>
           </div>
