add review slides

--- a/app/index.html
+++ b/app/index.html
@@ -328,6 +328,12 @@
               <div class="reviews__slider-item swiper-slide">
                 <img class="reviews__slider-img" src="images/review-slide-7.jpg" alt="review-slide" />
               </div>
+              <div class="reviews__slider-item swiper-slide">
+                <img class="reviews__slider-img" src="images/review-slide-8.jpg" alt="review-slide" />
+              </div>
+              <div class="reviews__slider-item swiper-slide">
+                <img class="reviews__slider-img" src="images/review-slide-9.jpg" alt="review-slide" />
+              </div>
             </div>
 
             <div class="swiper-button-prev"></div>
